2008-02-07  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el (rails-test:line-regexp): apply patch [#16714]
	from Rémi Vanicat, can match empty filename

	* rails-scripts.el (rails-script:console): passed default
	environment to script/console

2007-12-23  Michael Klishin <michael.klishin@railsware.com>

        * rails-spec.el (rails-spec:run-this-spec): Run spec where the point is
        
2007-11-04  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-core.el (rails-core:model-exist-p): fixed error, when model-file not exists.

2007-11-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-core.el (rails-core:model-file
	rails-core:controller-file-by-model): search namespaced models and
	controllers.

	* rails-test.el (rails-test:line-regexp): applled patch by Alan Shields, 
	don't hightlight whitespaces in test output.

	* rails-test.el: appled patch by Alan Shields,
	can't run rails-test-current-* without a file.

2007-11-02  Dmitry Galinsky  <dima.exe@gmail.com>
	
	* rails.el (rails-templates-list): added 'html.erb'.

	* rails-snippets-feature.el (rails-snippets-feature:rest): replace *_url to *_path

	* inflections.el (singularize-string pluralize-string): downcase
	string befored searched.

2007-10-12  Dmitry Galinsky  <dima.exe@gmail.com>

	* inflections.el (pluralize-string singularize-string): downcase
	input string before find in irregular

2007-09-11  Peter Rezikov  <crazypit13@gmail.com>

	* rails.el: basic support of Markaby templates.
                                         
2007-08-18  Peter Rezikov  <crazypit13@gmail.com>
        * rails-spec.el: base support for rspec. Function
        `rails-spec:run-all', `rails-spec:run-this-file', `rails-spec:run-last',
        `rails-spec:run-files'.  Variables: `rails-spec:all-files',
        `rails-spec:last-files', `rails-spec:runner',
        `rails-spec:runner-options'.
        * rails-find.el, rails-ui.el: finds for rspec
        * rails-project.el: new functions: rails-project:in-root-with-cd, 